--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.4.6",
     "@nestjs/core": "^8.4.6",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.4.6",
     "@nestjs/typeorm": "^8.1.2",
     "class-transformer": "^0.5.1",
